Final copy for 10 Dec 2023

--- a/newsletter/2023-12-10.md
+++ b/newsletter/2023-12-10.md
@@ -1,59 +1,54 @@
-# tktktk
-## #Web3Weekly: Dec. 3-9, 2023
+# #Web3Weekly: Dec. 3-9, 2023
 
-<!-- Brief intro... -->
+<!-- Brief intro. Not doing a full lead item this week... -->
+
+**Crypto remains red hot** going into year-end both in terms of market performance and other industry news as well.
+
+The token market's global valuation is up 15% so far in December, to $1.64 trillion in recent trading, according to [CoinMarketCap](https://coinmarketcap.com/charts/) data. That means it's now more than halfway back from the record $3 trillion valuation set in late 2021, generally regarded as the start of a new "crypto winter."
+
+A little ironic to see this market thaw happen now, during *actual* winter. But hey. A metaphor always has its limits. ☺️
 
 ### Week in Review
 
-- **El Salvador's President Nayib Bukele** said the country's sovereign bitcoin holdings are now profitable thanks to the token's recent price gains. ([CoinDesk](https://www.coindesk.com/markets/2023/12/04/el-salvadors-bitcoin-investment-in-the-black-says-president-bukele/))
+- **Bitcoin posted a 10% weekly gain,** helped by the release of [strong jobs data](https://www.theblock.co/post/266709/bitcoins-price-rises-with-stocks-as-wall-street-assesses-us-jobs-data) in the U.S. on Friday. Over the last 30 days, BTC has soared 17% to a 20-month high above $44,000 per token. One downside: Network fees and congestion are [rising as well](https://decrypt.co/208945/rising-bitcoin-fees-prompt-renewed-battle-over-ordinals-brc-20-tokens).
+
+- **The crypto news site Decrypt** is merging with podcaster Rug Radio, in a move that could help the site tap into a broader creator community. ([Axios](https://www.axios.com/2023/12/10/decrypt-rug-radio-merge-crypto))
+
+- **Tether announced it will block wallets sanctioned by the United States** from using its stablecoin USDT. But on-chain data shows that the vast majority of the addresses currently don't currently hold any of the token. ([The Block](https://www.theblock.co/post/266894/tethers-new-sanctions-froze-161-wallets-only-eleven-hold-usdt))
+
+- **Three U.S. presidential candidates** (not including either of the major-party frontrunrunners) will [hold a "crypto forum"](https://twitter.com/standwithcrypto/status/1730693103210635302) on Monday in New Hampshire at 2:30 Eastern as part of Coinbase's campaign #StandWithCrypto. You can RSVP to attend in person [here](https://cryptopresidentialforum.splashthat.com/). (No streaming details posted yet, but I would wager that either the #StandWithCrypto [Twitter feed](https://twitter.com/standwithcrypto) or the website of the event's media partner [CoinDesk](https://coindesk.com) will be good places to look.)
+
+- **In testimony to a U.S. Senate committee,** JPMorgan CEO Jamie Dimon urged members to "shut down" crypto altogether. ([Fortune](https://fortune.com/crypto/2023/12/06/jamie-dimon-crypto-senate-hearing-jpmorgan-blockchain-payments/))
+
+- **El Salvador's President Nayib Bukele** said the country's sovereign bitcoin holdings are [back in the black](https://www.coindesk.com/markets/2023/12/04/el-salvadors-bitcoin-investment-in-the-black-says-president-bukele/) thanks to the crypto market's recent rally. The country also announced a [new "freedom visa" program](https://decrypt.co/209122/el-salvador-passport-cough-up-1m-bitcoin-tether) to attract foreign residents who hold at least $1 million in crypto.
 
 - **The Bank for International Settlements** recently unveiled a [joint innovation project](https://www.atlanticcouncil.org/blogs/new-atlanticist/a-newly-announced-blockchain-backed-system-could-transform-development-lending/) with the International Monetary Fund and World Bank to use blockchain technology to speed up and secure transfers of money loaned to developing nations.
 
 - **The MIT Technology Review** has been looking into both [AI's heavy carbon footprint](https://www.technologyreview.com/2023/12/05/1084417/ais-carbon-footprint-is-bigger-than-you-think/) and Big Tech's efforts to gain [an early stranglehold](https://www.technologyreview.com/2023/12/05/1084393/make-no-mistake-ai-is-owned-by-big-tech/) on the sector.
 
-<!-- Everything after this point needs vetting, fact checking... -->
-
-- Three U.S. presidential candidates (not including either of the party frontrunrunners) will  hold a "crypto forum" on Monday. https://www.ccn.com/news/us-presidential-crypto-trump-kennedy-ramaswamy/
-
-- **Market wrap:** TK item on the week's volatile market action. Update Friday for the latest. <!-- https://decrypt.co/208164/bitcoin-halving-what-it-means-investors | -->
-
-- The rising fees on the Bitcoin network have led to renewed debate about using alternative tokens like BRC-20 to reduce costs. As transaction volumes rise, so do fees, putting pressure on Layer 1 networks. https://decrypt.co/208945/rising-bitcoin-fees-prompt-renewed-battle-over-ordinals-brc-20-tokens
-
-- A new startup is exploring ways to use blockchain to track uranium and alcohol shipments end-to-end. Creating an immutable record of transfers could help regulators and suppliers ensure products go where they are intended. https://blockworks.co/news/uranium-booze-blockchain
-
-- A new robo-advisor called Heron is launching that will use blockchain technology to securely store financial records and transactions. This could allow users to more easily switch between advisors while keeping their data private. https://www.axios.com/2023/12/05/exclusive-robo-advisor-blockchain-heron-goldfinch
-
-- JPMorgan CEO Jamie Dimon testified before the Senate and said the bank is exploring uses of blockchain technology, such as faster cross-border payments. However, he remains skeptical of cryptocurrencies like Bitcoin. https://fortune.com/crypto/2023/12/06/jamie-dimon-crypto-senate-hearing-jpmorgan-blockchain-payments/
-
-- CoinDesk's annual "Most Influential" list highlights 25 people who shaped crypto in 2023, including FTX's Sam Bankman-Fried and SEC Chair Gary Gensler. The list recognizes leaders, builders and regulators impacting the growing industry. https://www.coindesk.com/consensus-magazine/2023/12/04/introducing-most-influential-2023/
+<!--
 
 - Reports indicate that cryptocurrency exchange Binance has withdrawn its application to help manage an investment fund in Abu Dhabi after regulators expressed concerns. The withdrawal suggests the exchange may face ongoing regulatory hurdles expanding services internationally. https://www.theblock.co/post/266656/binance-withdraws-application-to-manage-abu-dhabi-investment-fund-report
 
-- 2024 may be the year that tokenization begins to be widely adopted through new blockchain infrastructure and standards. (https://www.coindesk.com/business/2023/11/29/2024-will-be-the-year-tokenization-truly-finally-begins/)
-
-- Big tech companies have put society at risk through surveillance and lack of oversight, and citizens must advocate for stronger data and privacy protections. (https://www.coindesk.com/consensus-magazine/2023/11/28/big-tech-has-put-our-future-at-risk-its-time-to-fight-back/)
-
-- Creating a manifesto can help clarify one's values and vision to guide decisions and inspire others. (https://www.coindesk.com/consensus-magazine/2023/11/28/everyone-needs-a-manifesto/)
-
 - New AI art raises questions about authenticity and ownership of creative works. (https://www.washingtonpost.com/opinions/2023/11/29/sports-illustrated-artificial-intelligence/)
 
-- https://www.nytimes.com/2023/12/07/technology/tech-startups-collapse.html
+- The article from the NY Times discusses how many tech startups are laying off employees or shutting down entirely as funding dries up due to economic uncertainty. https://www.nytimes.com/2023/12/07/technology/tech-startups-collapse.html
 
-- https://www.theblock.co/post/266872/tether-freezes-all-ofac-sanctioned-wallets-in-proactive-security-measure
+- A new robo-advisor called Heron is launching that will use blockchain technology to securely store financial records and transactions. This could allow users to more easily switch between advisors while keeping their data private. https://www.axios.com/2023/12/05/exclusive-robo-advisor-blockchain-heron-goldfinch
+
+- A new startup is exploring ways to use blockchain to track uranium and alcohol shipments end-to-end. Creating an immutable record of transfers could help regulators and suppliers ensure products go where they are intended. https://blockworks.co/news/uranium-booze-blockchain
+
+- https://www.nytimes.com/2023/12/08/opinion/google-meta-canada-press-blockade.html: An opinion piece argues that Google and Meta's threats to block news sharing in Canada could set a troubling precedent for control over information online.
 
 -->
 
 ### Odds & Ends
 
-- https://www.forbes.com/sites/bernardmarr/2023/12/07/the-6-most-important-web3-blockchain-and-cryptocurrency-trends-in-2024/
+- **CoinDesk released its annual list** of the [most influential people in crypto](https://www.coindesk.com/consensus-magazine/2023/12/04/introducing-most-influential-2023/). This year's edition eschewed a linear ranking of each person, but did divide things into a top 10 and 40 honorable mentions.
 
-- https://www.space.com/star-wars-holiday-special-documentary-book
-
-<!-- Boilerplate needs re-working. This is version from last week... -->
+- **Happy Life Day!** A new book examines how and why the infamous Star War Wars Holiday Special came about in 1978. ([Space.com](https://www.space.com/star-wars-holiday-special-documentary-book))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
-
-<!--Move this content to standing editorial policy page on the website.     _**Note: #Web3Weekly content is intended for journalistic purposes only, not as investment advice. Always [DYOR](https://www.urbandictionary.com/define.php?term=DYOR) and consult appropriate financial professionals before making investment decisions.**_ -->
 
 _**Best wishes for a healthy and productive week ahead.**_  
 
