Edits to news summary items

--- a/newsletter/2023-12-17.md
+++ b/newsletter/2023-12-17.md
@@ -20,11 +20,30 @@ That's a good note to end the year on, I think. Since next Sunday is Christmas, 
 
 ### Week in Review
 
+- **Crypto wallet maker Ledger suffered a security breach Thursday** that in turn affected multiple decentralized applications, including Zapper, SushiSwap, Phantom, Balancer, and Revoke.cash. Ledger quickly announced it had patched the compromised code. Meanwhile, users' monetary losses are still being tallied, with initial estimates in the hundreds of thousands of dollars. ([CoinDesk](https://www.coindesk.com/consensus-magazine/2023/12/14/what-we-know-about-the-massive-ledger-hack/))
+
+- **The long-term picture for crypto hacks may be improving, though.** Industrywide losses from security breaches fell nearly 50% in 2023 to $1.9 billion, according to data from Chainalysis. ([Cointelegraph](https://cointelegraph.com/news/crypto-hacking-losses-plunge-nearly-50-2023-research))
+
+- **Tether says** it has onboarded the FBI and US Secret Service to its compliance program in efforts to work more closely with law enforcement. ([The Block](https://www.theblock.co/post/267973/tether-weve-onboarded-fbi-secret-service-to-our-platform))
+
+- **America's Financial Accounting Standards Board** published long-awaited rules that will allow companies to use fair-value accounting models for their holdings of digital assets like bitcoin. ([The Block](https://www.theblock.co/post/267447/fasb-publishes-new-crypto-rules-that-will-let-firms-use-fair-value-accounting))
+
+- **SafeMoon filed for bankruptcy** as its native SFM token crashed over 50% to new all-time lows. The bankruptcy filing comes on the heels of U.S. prosecutors' indictment of several SafeMoon exeucitives last month on securities fraud and money laundering charges. ([Decrypt](https://decrypt.co/209951/safemoon-files-for-bankruptcy-sfm-token-crashes-50-to-all-time-low))
+
+- **In a new blog post,** Ethereum creator Vitalik Buterin raised the possibility of moving some layer-2 functions [back to the main Ethereum blockchain](https://notes.ethereum.org/@vbuterin/enshrined_zk_evm). Such an approach [could effectively reverse](https://www.coindesk.com/tech/2023/12/13/ethereums-buterin-floats-prospect-of-taking-some-layer-2-functions-back-on-main-chain/) his earlier advocacy of third-party "rollups" to improve Ethereum's scalability.
+
+- **Sales of the once-struggling Solana phone** are getting a boost thanks to an airdrop of the memecoin BONK for users of the device. ([CoinDesk](https://www.coindesk.com/markets/2023/12/14/sales-of-solana-phone-surge-as-traders-chase-bonk-arbitrage/))
+
 - **U.S. presidential candidates** Asa Hutchinson, Dean Phillips, and Vivek Ramaswamy participated in a "crypto forum" on Monday sponsored by Coinbase's Stand With Crypto initiative. Full video of the event is available [here](https://www.youtube.com/watch?v=refW193w3Xw&t=7226s).
 
-- The New York Times appointed its first director of AI in December 2023. Sam Dolnick will oversee the responsible development and application of AI at the newspaper. (https://www.cnn.com/2023/12/13/media/new-york-times-first-director-ai/index.html)
+<!--
 
-- Crypto hacking losses fell nearly 50% in 2023 according to a report from Chainalysis. Total hacking losses were around $1.9 billion for the year. (https://cointelegraph.com/news/crypto-hacking-losses-plunge-nearly-50-2023-research)
+Cut for space...
+
+- A US appeals court largely upheld an antitrust ruling against Google but narrowed the scope of one particular finding. The ruling was in an antitrust lawsuit brought by Epic Games. (https://www.nytimes.com/2023/12/11/technology/epic-games-google-antitrust-ruling.html)
+
+- Coinbase's international arm will now offer spot trading services to non-US institutional investors and traders in over 100 countries. (https://www.theblock.co/post/267438/coinbases-international-arm-adds-spot-trading-for-non-us-institutions)
+
 
 - Argentina's populist politician Javier Milei has so far rejected calls to make bitcoin legal tender like a currency in Argentina as the peso loses over half its value. (https://www.coindesk.com/markets/2023/12/13/argentinas-milei-so-far-shunning-bitcoin-devalues-peso-by-more-than-50/)
 
@@ -32,47 +51,28 @@ That's a good note to end the year on, I think. Since next Sunday is Christmas, 
 
 - Bitcoin experienced a flash crash in November 2023 where it dropped from around $17,000 to as low as $15,500 according to some analysts. No single factor caused the crash. (https://www.coindesk.com/consensus-magazine/2023/12/11/explaining-bitcoins-flash-crash/)
 
-- Ethereum creator Vitalik Buterin raised the possibility of moving some layer 2 functions back to the main Ethereum blockchain to improve scalability and user experience. (https://www.coindesk.com/tech/2023/12/13/ethereums-buterin-floats-prospect-of-taking-some-layer-2-functions-back-on-main-chain/)
-
-- Coinbase's international arm will now offer spot trading services to non-US institutional investors and traders in over 100 countries. (https://www.theblock.co/post/267438/coinbases-international-arm-adds-spot-trading-for-non-us-institutions)
-
-- The US Financial Accounting Standards Board published new rules that will allow companies to use fair value accounting models for holdings of digital assets like bitcoin. (https://www.theblock.co/post/267447/fasb-publishes-new-crypto-rules-that-will-let-firms-use-fair-value-accounting)
-
 - Non-profit Worldcoin unveiled integrations with Minecraft, Reddit, Telegram and Shopify to distribute its universal basic income token. (https://www.theblock.co/post/267463/worldcoin-unveils-integrations-with-minecraft-reddit-telegram-and-shopify)
 
 - Blockchain.com plans to increase its headcount by 25% in 2023 to over 1,000 employees according to Bloomberg as it expands its product offerings. (https://www.theblock.co/post/267464/blockchain-com-to-increase-headcount-by-25-next-year-bloomberg)
 
-- Polygon is discontinuing development of its zk-rollup scaling solution Edge and will instead focus on zk-stark and zk-snark technologies. This also affects its plans to build Dogechain. (https://www.coindesk.com/tech/2023/12/15/polygon-stops-work-on-edge-used-to-build-dogechain-as-focus-turns-to-zk/)
-
-- Sales of Solana's Ethereum Phone surged as traders looked to take advantage of arbitrage opportunities between Ethereum and Solana prices. (https://www.coindesk.com/markets/2023/12/14/sales-of-solana-phone-surge-as-traders-chase-bonk-arbitrage/)
-
-- Security researchers continue to investigate the massive hack of crypto startup Ledger that compromised personal details of over 1 million customers. (https://www.coindesk.com/consensus-magazine/2023/12/14/what-we-know-about-the-massive-ledger-hack/)
-
-- Tether says it has onboarded the FBI and US Secret Service to its compliance program in efforts to work more closely with law enforcement. (https://www.theblock.co/post/267973/tether-weve-onboarded-fbi-secret-service-to-our-platform)
-
-- A US appeals court largely upheld an antitrust ruling against Google but narrowed the scope of one particular finding. The ruling was in an antitrust lawsuit brought by Epic Games. (https://www.nytimes.com/2023/12/11/technology/epic-games-google-antitrust-ruling.html)
-
 - Bitcoin experienced a flash crash in November 2023 where it dropped from around $17,000 to as low as $15,500 according to some analysts. No single factor caused the crash. (https://www.coindesk.com/consensus-magazine/2023/12/11/explaining-bitcoins-flash-crash/)
-
-- Crypto project Safemoon filed for bankruptcy in 2023 as its native SFM token crashed over 50% to new all-time lows. (https://decrypt.co/209951/safemoon-files-for-bankruptcy-sfm-token-crashes-50-to-all-time-low)
-
-- A UK lawmaker called on the government to provide more support to the blockchain industry through regulation and advocacy. (https://www.coindesk.com/policy/2023/12/15/lawmaker-calls-for-the-uk-government-to-do-more-for-blockchain/)
-
-- The CTO of DeFi protocol Sushi warned of a potential exploit found in its code and urged users to withdraw funds until it could be addressed. (https://www.coindesk.com/business/2023/12/14/defi-protocol-sushis-cto-warns-of-possible-exploit/)
-
-- Security researchers continue to investigate the massive hack of crypto startup Ledger that compromised personal details of over 1 million customers. (https://www.coindesk.com/consensus-magazine/2023/12/14/what-we-know-about-the-massive-ledger-hack/)
 
 - A Washington Post article analyzed the implications of the Epic Games v. Google ruling for other app developers and tech giants like Apple. (https://www.washingtonpost.com/technology/2023/12/13/google-epic-games-app-store-apple-fortnite/)
 
+- A UK lawmaker called on the government to provide more support to the blockchain industry through regulation and advocacy. (https://www.coindesk.com/policy/2023/12/15/lawmaker-calls-for-the-uk-government-to-do-more-for-blockchain/)
+
 - A Slate article looked at the practice of jailbreaking tablets in prisons to enable more communication and education for inmates despite rules against it. (https://slate.com/technology/2023/12/prison-tablet-jailbreaking-incarceration-connectivity.html)
 
-- Wu-Tang Clan will begin a residency in Las Vegas at the Venetian Resort in 2024, continuing the trend of hip hop acts performing multi-show engagements in Sin City. (https://www.washingtonpost.com/style/2023/12/13/wu-tang-clan-las-vegas-residency/)
+-->
+
+### Odds & Ends
+
+- The New York Times appointed its first director of AI in December 2023. Sam Dolnick will oversee the responsible development and application of AI at the newspaper. (https://www.cnn.com/2023/12/13/media/new-york-times-first-director-ai/index.html)
 
 - Researchers have developed robots that can determine when they need human help by monitoring their own performance on tasks. This could help make robots more useful in real world settings. (https://www.technologyreview.com/2023/12/08/1084672/these-robots-know-when-to-ask-for-help/)
 
 - Gawker Media has been acquired by Singapore music executive and founder of Caldecott Music Group, Michael M. Ovitz. He says he sees an opportunity to reinvent the digital media company. (https://www.msn.com/en-us/money/other/gawker-sold-to-founder-of-singapore-s-caldecott-music-group-it-has-the-opportunity-for-reinvention-exclusive/ar-AA1jZrKW)
 
-### Odds & Ends
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
