Final for 17 Dec.

--- a/newsletter/2023-12-17.md
+++ b/newsletter/2023-12-17.md
@@ -1,22 +1,18 @@
 ![Christmas ornaments](https://images.unsplash.com/photo-1511895654441-f6a0e1db5cbd?q=80&w=3558&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
 *Photo by Element5 Digital via Unsplash*
 
-# tktktk
+# 'Tis the season for crypto giving
 ## #Web3Weekly: Dec. 10-16, 2023
 
-<!--
+**As this is my last newsletter before Christmas,** I'd like to highlight the Giving Block's excellent (and recently updated) [guide to donating crypto](https://thegivingblock.com/resources/a-complete-guide-to-donating-crypto/) to charitable causes.
 
-Riff on the Giving Block's guide to donating crypto to charity:
+Giving Block itself is a platform for connecting donors and nonproits. But their guide isn't just a how-to regarding their own services. There is also a lot of good general info included about topics like claiming tax deductions for crypto donations, recordkeeping, and so on.
 
-https://thegivingblock.com/resources/a-complete-guide-to-donating-crypto/
+Of course, 2023 has been a banner year for crypto returns, with the token market's global valuation more than doubling to $1.6 trillion, according to [CoinMarketCap](https://coinmarketcap.com/charts/). The holidays would be a great time to direct at least a little of that bounty to the less fortunate, if you're able.
 
+Finally, one housekeeping note: I'll be taking next Sunday off for Christmas Eve. But I'll be back Dec. 31 with a year-end market wrapup.
 
-
-🎅
-
-That's a good note to end the year on, I think. Since next Sunday is Christmas, I won't be publishing this newsletter. I wish you all a very happy holiday and safe travels, if you're going to be on the road.
-
--->
+Until then, I wish you all a happy holiday and safe travels if you'll be on the road. ☺️🎅🎄
 
 ### Week in Review
 
@@ -67,11 +63,9 @@ Cut for space...
 
 ### Odds & Ends
 
-- The New York Times appointed its first director of AI in December 2023. Sam Dolnick will oversee the responsible development and application of AI at the newspaper. (https://www.cnn.com/2023/12/13/media/new-york-times-first-director-ai/index.html)
+- **The New York Times appointed** its first director of artificial intelligence initiatives, to determine how the technology should be integrated into the venerable newspaper's journalism. Zach Seward, founding editor of the tech-focused news site Quartz, will fill the position. ([CNN](https://www.cnn.com/2023/12/13/media/new-york-times-first-director-ai/index.html))
 
-- Researchers have developed robots that can determine when they need human help by monitoring their own performance on tasks. This could help make robots more useful in real world settings. (https://www.technologyreview.com/2023/12/08/1084672/these-robots-know-when-to-ask-for-help/)
-
-- Gawker Media has been acquired by Singapore music executive and founder of Caldecott Music Group, Michael M. Ovitz. He says he sees an opportunity to reinvent the digital media company. (https://www.msn.com/en-us/money/other/gawker-sold-to-founder-of-singapore-s-caldecott-music-group-it-has-the-opportunity-for-reinvention-exclusive/ar-AA1jZrKW)
+- **Researchers have developed robots** that can determine when they need human help by monitoring their own performance on tasks. This could help make robots more reliable in real-world settings. ([MIT Technology Review](https://www.technologyreview.com/2023/12/08/1084672/these-robots-know-when-to-ask-for-help/))
 
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
