--- a/newsletter/2023-12-17.md
+++ b/newsletter/2023-12-17.md
@@ -6,7 +6,7 @@
 
 **As this is my last newsletter before Christmas,** I'd like to highlight the Giving Block's excellent (and recently updated) [guide to donating crypto](https://thegivingblock.com/resources/a-complete-guide-to-donating-crypto/) to charitable causes.
 
-Giving Block itself is a platform for connecting donors and nonproits. But their guide isn't just a how-to regarding their own services. There is also a lot of good general info included about topics like claiming tax deductions for crypto donations, recordkeeping, and so on.
+Giving Block itself is a platform for connecting donors and nonprofits. But their guide isn't just a how-to regarding their own services. There is also a lot of good general info included about topics like claiming tax deductions for crypto donations, recordkeeping, and so on.
 
 Of course, 2023 has been a banner year for crypto returns, with the token market's global valuation more than doubling to $1.6 trillion, according to [CoinMarketCap](https://coinmarketcap.com/charts/). The holidays would be a great time to direct at least a little of that bounty to the less fortunate, if you're able.
 
