Fleshing out news items.

--- a/newsletter/2024-01-14.md
+++ b/newsletter/2024-01-14.md
@@ -193,25 +193,23 @@ SEC Twitter breach on Tuesday: https://www.cnn.com/2024/01/09/markets/sec-has-no
 
 - **The Solana Foundation** released a [report](https://solana.com/news/2023-state-of-solana-developer-ecosystem) regarding its efforts to grow their developer community in 2023. The foundation said participation and retention improved markedly throughout the year, with 2,500-3,000 monthly active developers contributing to Solana's open-source code.
 
-- PayPal's stablecoin USDP saw its market cap grow 70% over the last month to $290 million. The growth was driven by increased adoption on crypto exchanges. (https://www.theblock.co/post/272309/paypals-stablecoin-market-cap-grows-70-over-last-month-to-290-million)
+- **PayPal's stablecoin PYUSD** saw its market cap grow 70% over the last month to $290 million, helped by new listings on crypto exchanges. ([The Block](https://www.theblock.co/post/272309/paypals-stablecoin-market-cap-grows-70-over-last-month-to-290-million))
 
-- Genesis, a digital currency prime brokerage, received approval to operate as a limited purpose trust company in New York. This allows Genesis to offer expanded crypto financial services in the state. (https://fortune.com/crypto/2024/01/12/genesis-settlement-department-financial-services-barry-silbert-bitlicense-crypto/)
+- **Forbes reports** that Genesis Global Trading reached an [$8 million settlement](https://fortune.com/crypto/2024/01/12/genesis-settlement-department-financial-services-barry-silbert-bitlicense-crypto/) with New York state regulators for failing to failing to maintain adequate anti-money laundering and cybersecurity safeguards. Genesis, a unit of Digital Currency Group, will also cease operations in the state and forfeit its BitLicense, a sometimes-controversial certification that New York has created for digital asset brokerages. In a [recent report](https://www.osc.ny.gov/files/state-agencies/audits/pdf/sga-2024-22s18.pdf), the state's comptroller criticized the thoroughness and security of BitLicense enforcement.
 
-- New York's BitLicense oversight framework faces a critical review to determine if changes are needed. Some argue the regulations are too strict and limit innovation, while others say reforms could weaken important consumer protections. (https://www.tradingview.com/news/cointelegraph:3e5b95308094b:0-bitlicense-oversight-in-new-york-faces-critical-review/)
+- **The NEAR Foundation** said will cut employee headcount [by 40%](https://pages.near.org/blog/an-update-from-the-near-foundation/) in an effort to focus spending on a "higher-impact set of activities" to support the NEAR developer community.
 
-- The NEAR Foundation laid off 40% of its staff, citing a need to cut costs and focus resources following the crypto winter. They will prioritize supporting developers. (https://unchainedcrypto.com/near-foundation-cuts-40-of-workforce/)
+- **Terraform Labs co-founder Do Kwon** has asked a U.S. court to push back his civil fraud trial from Jan. 29 to mid-March so that he can appear in person. Kwon is currently in Montenegro awaiting extradition. ([Bloomberg](https://finance.yahoo.com/news/terra-kwon-says-us-extradition-180159581.html))
 
-- Do Kwon, the founder of failed stablecoin Terra, requested a delay in his SEC trial to personally appear in court at a later date. He was charged with securities fraud. (https://decrypt.co/news-explorer?pinned=439080&title=terras-do-kwon-requests-sec-trial-delay-for-personal-appearance)
-
-- Sotheby's auctioned off ten unique Bitcoin artworks called "Bitcoin Ordinals." Each sold for tens of thousands of dollars worth of Bitcoin. (https://www.theblock.co/post/272357/sothebys-bitcoin-ordinals-auction)
-
-- China is considering ending online anonymity and requiring users of social media and other sites to register using their real names and national ID numbers. This would curb online criticism of the government. (https://www.technologyreview.com/2024/01/10/1086366/china-social-media-anonymity-end/
-
-- A study found that asking people to conduct their own research on potentially fake news stories made those stories seem more believable, not less. When people looked into stories themselves, they were more likely to believe false information compared to those who did not do additional research. (https://www.niemanlab.org/2024/01/asking-people-to-do-the-research-on-fake-news-stories-makes-them-seem-more-believable-not-less/)
+- **Sotheby's opened bidding** in an auction of 19 artworks created as Bitcoin Ordinals, a type of non-fungible token. ([The Block](https://www.theblock.co/post/272357/sothebys-bitcoin-ordinals-auction))
 
 # Odds & Ends
 
-- **Monday is Wikipedia Day!** https://en.wikipedia.org/wiki/Wikipedia:Wikipedia_Day#Host_an_event
+- **MIT Technology Review reporter Zeyi Yang** is concerned about recent moves in China to [curtail anonymity on social networks](https://www.technologyreview.com/2024/01/10/1086366/china-social-media-anonymity-end/).
+
+- **Maybe don't DYOR?** A [new study](https://www.nature.com/articles/s41586-023-06883-y) published in the journal Nature suggests that asking people to conduct their own research to evaluate misinformation often has the unintended effect of making those stories seem *more* believable to news consumers, not less. Groan...
+
+- **Monday is Wikipedia Day!** The venerable community-maintained encyclopedia will celebrate the 23rd anniversary of its launch on Jan. 15, 2001. Events are scheduled in cities around the world throughout the week to discuss Wikipedia's impact and plan its future. If you would like to participate, [here is a list](https://en.wikipedia.org/wiki/Wikipedia:Wikipedia_Day#Host_an_event).
 
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
