--- a/newsletter/2024-01-14.md
+++ b/newsletter/2024-01-14.md
@@ -1,4 +1,4 @@
-# Assessing bitcoin's "IPO"
+# Assessing Bitcoin's "IPO"
 ## #W3W: Jan. 7-13, 2024
 
 ![The Winklevoss twins at TechCrunch Disrupt 2015](https://upload.wikimedia.org/wikipedia/commons/d/d1/TechCrunch_Disrupt_NY_2015_-_Day_3_%2817391082682%29.jpg)
@@ -21,11 +21,15 @@ In other words, owners of so-called [spot](https://www.investopedia.com/terms/s/
 
 That said, there are still reasons for hope over the longer term. For starters, bitcoin's 155% rally in 2023 was driven largely by anticipation of the ETFs. So we might dismiss the last couple days' selling as a bit of harmless profit taking.
 
-The new funds also saw solid trading volume, including $4.6 billion in turnover the first day. So at least investors aren't ignoring them altogether. Bitcoin bulls are hoping that attention could could turn into buying later. Analyst forecast there could be up to $100 billion of new money allocated to bitcoin this year via ETFs, according to [Reuters](https://www.msn.com/en-us/money/markets/us-bitcoin-etfs-see-46b-in-volume-in-first-day-of-trading/ar-AA1mQJNn).
+The new funds also saw solid trading volume, including $4.6 billion in turnover the first day. So at least investors aren't ignoring them altogether. That might truly have been the worst-case scenario.
+
+Bitcoin bulls are hoping that attention could could turn into buying later. Analysts forecast there could be up to $100 billion of new money allocated to bitcoin this year via ETFs, according to [Reuters](https://www.msn.com/en-us/money/markets/us-bitcoin-etfs-see-46b-in-volume-in-first-day-of-trading/ar-AA1mQJNn).
 
 Also notable: Because of the public nature of prices on the Bitcoin network, the launch of bitcoin ETFs was arguably orders of magnitude more transparent *before, during, and after* the offerings than a conventional IPO would have been. By comparison, early venture funding of startups, valuations of such companies, and pre-IPO underwriting are some of the most opaque processes that exist in any corner of the financial world.
 
-Over time, I think it will also be fascinating to see how the twin cultures of early bitcoin adopters and Wall Streeters continue to interact, clash, and evolve. Bitcoin's famously pseudonymous founder Satoshi Nakamoto explicitly designed his creation as an antidote to centralized finance. By that standard, does it really make sense to rejoice at a listing on the NYSE or Nasdaq pegged to bitcoin?
+Over time, I think it will also be fascinating to see how the twin cultures of early bitcoin adopters and Wall Streeters continue to interact, clash, and evolve. Bitcoin's famously pseudonymous founder Satoshi Nakamoto explicitly designed his creation as an antidote to centralized finance.
+
+By that standard, does it really make sense to rejoice at a listing on the NYSE or Nasdaq pegged to bitcoin?
 
 Pal, who knows both cultures as well as anyone, addressed this tension in [an interview](https://www.youtube.com/watch?v=EHtnZM2QVjU&t=1080s) with the Crypto Banter podcast. Referring to SEC Chair Gary Gensler, a frequent crypto foe who [reluctantly](https://www.sec.gov/news/statement/gensler-statement-spot-bitcoin-011023) voted in favor of ETF approval, Pal said:  
 
@@ -43,7 +47,7 @@ The week's notable developments in other corners of the tokenized economy:
 
 - **Forbes reports** that Genesis Global Trading reached an [$8 million settlement](https://fortune.com/crypto/2024/01/12/genesis-settlement-department-financial-services-barry-silbert-bitlicense-crypto/) with New York state regulators for failing to failing to maintain adequate anti-money laundering and cybersecurity safeguards. Genesis, a unit of Digital Currency Group, will also cease operations in the state and forfeit its BitLicense, a sometimes-controversial certification that New York has created for digital asset brokerages. In a [recent report](https://www.osc.ny.gov/files/state-agencies/audits/pdf/sga-2024-22s18.pdf), the state's comptroller criticized the thoroughness and security of BitLicense enforcement.
 
-- **The NEAR Foundation** said will cut employee headcount [by 40%](https://pages.near.org/blog/an-update-from-the-near-foundation/) in an effort to focus spending on a "higher-impact set of activities" to support the NEAR developer community.
+- **The NEAR Foundation** said it will cut employee headcount [by 40%](https://pages.near.org/blog/an-update-from-the-near-foundation/) in an effort to focus spending on a "higher-impact set of activities" to support the NEAR developer community.
 
 - **Terraform Labs co-founder Do Kwon** has asked a U.S. court to push back his civil fraud trial from Jan. 29 to mid-March so that he can appear in person. Kwon is currently in Montenegro awaiting extradition. ([Bloomberg](https://finance.yahoo.com/news/terra-kwon-says-us-extradition-180159581.html))
 
