--- a/newsletter/2024-01-14.md
+++ b/newsletter/2024-01-14.md
@@ -1,4 +1,4 @@
-# Assessing Bitcoin's "IPO"
+# Assessing bitcoin's "IPO"
 ## #W3W: Jan. 7-13, 2024
 
 ![The Winklevoss twins at TechCrunch Disrupt 2015](https://upload.wikimedia.org/wikipedia/commons/d/d1/TechCrunch_Disrupt_NY_2015_-_Day_3_%2817391082682%29.jpg)
@@ -27,9 +27,9 @@ Bitcoin bulls are hoping that attention could could turn into buying later. Anal
 
 Also notable: Because of the public nature of prices on the Bitcoin network, the launch of bitcoin ETFs was arguably orders of magnitude more transparent *before, during, and after* the offerings than a conventional IPO would have been. By comparison, early venture funding of startups, valuations of such companies, and pre-IPO underwriting are some of the most opaque processes that exist in any corner of the financial world.
 
-Over time, I think it will also be fascinating to see how the twin cultures of early bitcoin adopters and Wall Streeters continue to interact, clash, and evolve. Bitcoin's famously pseudonymous founder Satoshi Nakamoto explicitly designed his creation as an antidote to centralized finance.
+Over time, I think it will also be fascinating to see how the twin cultures of early bitcoin adopters and Wall Streeters continue to interact, clash, and evolve.
 
-By that standard, does it really make sense to rejoice at a listing on the NYSE or Nasdaq pegged to bitcoin?
+Bitcoin's famously pseudonymous founder Satoshi Nakamoto explicitly designed his creation as an antidote to centralized finance. By that standard, does it really make sense to rejoice over a listing, pegged to bitcoin, on the NYSE or Nasdaq?
 
 Pal, who knows both cultures as well as anyone, addressed this tension in [an interview](https://www.youtube.com/watch?v=EHtnZM2QVjU&t=1080s) with the Crypto Banter podcast. Referring to SEC Chair Gary Gensler, a frequent crypto foe who [reluctantly](https://www.sec.gov/news/statement/gensler-statement-spot-bitcoin-011023) voted in favor of ETF approval, Pal said:  
 
